apps/home-automation/zigbee2mqtt/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
      protocol: TCP
