apps/home-automation/zigbee2mqtt/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["zigbee2mqtt.support4u.se"]
      secretName: zigbee2mqtt-tls
  rules:
    - host: zigbee2mqtt.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 80
